# Code-RAG-Agent

./: .coverage.Nikhils-MacBook-Pro_local.pid7385.XHUBwtQx.HNQIp837rWOh  .dockerignore  .gitignore  Dockerfile  README.md  api.py  cli.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: code_agent.py
core/: __init__.py  config.py
core/graph/: dependency_graph.py
core/llm/: ollama_client.py
core/parser/: ast_parser.py
core/pipeline/: codebase_pipeline.py
core/rerank/: cross_encoder_ranker.py
core/retrieval/: chunker.py  embedder.py  vector_store.py
docs/: INTERVIEW_PREP.md  design.md
evaluation/: eval_set.py  flask_eval_set.py  metrics.py  run_eval.py
tests/: conftest.py  test_ast_parser.py  test_chunker.py  test_code_agent.py  test_config.py  test_dependency_graph.py  test_metrics.py  test_pipeline.py  test_vector_store.py
